--- a/settings.html
+++ b/settings.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="css/style.min.css">
-
   <title>Визитка врача</title>
 </head>
 
@@ -235,8 +233,7 @@
           class="login-submit form-submit disabled modal-register-submit btn">
         <span class="modal-register-text">
           Регистрируясь, вы подтверждаете, что вам 18 или более лет и вы соглашаетесь c
-          <a href="#" target="_blank" class="primary">правилами использования </a> и <a href="privacy.html"
-            target="_blank" class="primary">политикой
+          <a href="#" class="primary">правилами использования </a> и <a href="privacy.html" class="primary">политикой
             конфиденциальности</a>.
         </span>
       </form>
@@ -330,6 +327,54 @@
 
   </div>
 
+  <!-- Изменить почту -->
+  <div class="modal modal-notify   ">
+
+    <div class="modal-wrap modal-notify-wrap">
+
+      <h2 class="modal-title"> Изменить электронную почту</h2>
+
+      <span class="modal-reset-text">На указанную вами почту было отправлено письмо для подтверждения. Пожалуйста,
+        подтвердите смену почты в этом письме.</span>
+      <div class="btn modal-notify-btn ">Понятно</div>
+
+    </div>
+
+  </div>
+
+  <!-- Почта  заменена  -->
+  <div class="modal modal-notify   ">
+
+    <div class="modal-wrap modal-notify-wrap">
+
+      <h2 class="modal-title"> Электронная почта заменена</h2>
+
+      <span class="modal-reset-text">Ваша электронная почта успешно заменена на newmail@gmail.com</span>
+      <div class="btn modal-notify-btn ">Понятно</div>
+
+    </div>
+
+  </div>
+
+  <!-- Удалить аккаунт?  -->
+  <div class="modal modal-delete   ">
+
+    <div class="modal-wrap modal-notify-wrap">
+
+      <h2 class="modal-title"> Удалить аккаунт</h2>
+
+      <span class="modal-reset-text">Вы уверены, что хотите удалить аккаунт? После удаления все данные будут
+        потеряны.</span>
+      <form action="#" class="modal-delete-wrap">
+
+        <div class="btn modal-notify-btn modal-delete__btn ">Не удалять</div>
+        <input type="submit" value="Удалить" class="btn-light modal-delete__btn">
+
+      </form>
+
+    </div>
+
+  </div>
   <!-- Сообщение отправлено -->
   <div class="modal modal-notify  ">
 
@@ -340,21 +385,6 @@
       <span class="modal-reset-text">Ваше сообщение отправлено. Наши специалисты ответят Вам в течение нескольких
         часов.</span>
       <div class="btn modal-notify-btn ">Закрыть</div>
-
-    </div>
-
-  </div>
-
-  <!-- Профиль опубликован  -->
-  <div class="modal modal-notify  ">
-
-    <div class="modal-wrap modal-notify-wrap">
-
-      <h2 class="modal-title"> Профиль опубликован</h2>
-
-      <span class="modal-reset-text">Поздравляем! Вы успешно опубликовали свой профиль. Теперь он доступен для просмотра
-        посетителями сайта.</span>
-      <div class="btn modal-notify-btn ">Продолжить</div>
 
     </div>
 
@@ -510,98 +540,144 @@
 
     </div>
   </div>
-
-  <header class="header header_main ">
+  <header class="header header_login ">
     <div class="wrap content-flex">
-      <a href="index.html" class="logo">
+      <div class="logo">
         <img src="img/icons/logo.svg" alt="Визитка Врача">
-      </a>
+      </div>
       <div class="city toModal js-toChooseCity">
         <img src="img/icons/city-icon.svg" alt="">
         <span class="name">Москва</span>
       </div>
-      <div class="buttons content-flex">
-        <div class="signup js-toRegister">
-          Регистрация
-        </div>
-        <div class="login btn js-toLogin">
-          Вход
-        </div>
+      <form role="search" method="get" class="header-search search-form " action="#">
+        <label>
+          <span class="screen-reader-text">
+          </span>
+          <input type="text" class="search-field field header-search__field " placeholder="Поиск" maxlength="70" />
 
+
+        </label>
+        <button type="submit" class="header-search__submit">
+          <img src="img/icons/search-icon_white.svg" alt="" class="header-search__icon">
+        </button>
+      </form>
+
+      <div class="buttons content-flex">
+        <div class="header-mini js-toggleHeaderMenu">
+          Муратов. А
+        </div>
+        <a href="invited.html" class="btn header-invite">
+          Пригласить
+        </a>
+
+        <div class="header-mini__wrap  js-headerMenu">
+          <a href="profile.html" class="header-mini__item ">
+            <img src="img/icons/header-mini-1-icon.svg" alt="">
+            <img src="img/icons/header-mini-1-icon_active.svg" alt="" class="current">
+
+            <span>Мой профиль</span>
+          </a>
+          <a href="colleagues.html" class="header-mini__item ">
+            <img src="img/icons/header-mini-2-icon.svg" alt="">
+            <img src="img/icons/header-mini-2-icon_active.svg" alt="" class="current">
+            <span>Мои коллеги</span>
+          </a>
+          <div class="line"></div>
+          <a href="settings.html" class="header-mini__item current">
+            <img src="img/icons/header-mini-3-icon.svg" alt="">
+            <img src="img/icons/header-mini-3-icon_active.svg" alt="" class="current">
+
+            <span>Настройки</span>
+          </a>
+          <a href="index.html" class="header-mini__item">
+            <img src="img/icons/header-mini-4-icon_active.svg" alt="" class="current">
+            <img src="img/icons/header-mini-4-icon.svg" alt="">
+            <span>Выйти</span>
+          </a>
+        </div>
       </div>
+
 
     </div>
   </header>
 
-  <main class="main">
-    <section class="hero">
-      <img src="img/main/hero-img.png" alt="" class="hero-bg">
+  <main class="main ">
+    <section class="section data">
+
       <div class="wrap">
-        <h1 class="hero-title">Поможем найти вашего врача</h1>
-
-        <form role="search" method="get" class="hero-search search-form " action="#">
-          <label>
-            <span class="screen-reader-text">
-            </span>
-            <img src="img/icons/search-icon.svg" alt="" class="hero-search__icon">
-            <input type="text" class="search-field field hero-search__field " placeholder="Имя врача или специальность"
-              maxlength="70" />
-
-          </label>
-          <input type="submit" class="search-submit btn" value="Найти" />
-        </form>
+        <div class="section-nav">
+          <a href="#"> Главная </a>
+          <img src="img/icons/arrow-icon.svg" alt="">
+          <a href="#"> Личный кабинет </a>
+          <img src="img/icons/arrow-icon.svg" alt="">
+          <a href="#"> Настройки </a>
+        </div>
       </div>
-    </section>
-    <section class="recommend">
-      <div class="wrap">
 
-        <div class="recommend-head">
-          <h2 class="recommend-title">Рекомендуем в </h2>
-          <div class="recommend-city toModal js-toChooseCity">
-            <img src="img/icons/city-icon.svg" alt="">
-            <span class="name">Москва</span>
+      <div class="data-wrap">
+        <h2 class="section-title">Настройки</h2>
+
+        <form action="#" class="data-box" id="settingsChangeEmail">
+          <h3 class="data-box__title">Электронная почта</h3>
+          <div class="input-block">
+            <span class="input-block__hint">Эл. почта</span>
+            <input class="input-block__field field" type="email" name="email" id="" placeholder="mymail@mail.com">
           </div>
-          <a href="catalog.html" class="recommend-more">Все врачи</a>
-        </div>
-        <div class="recommend-wrap content-flex">
+          <input type="submit" value="Изменить" class=" form-submit disabled data-box__submit btn">
+        </form>
 
-          <a href="#" class="recommend-item">
-            <div class="recommend-item__img">
-              <img src="img/main/recommend-doctor-1.png" alt="">
+        <form action="#" class="data-box" id="settingsChangePassword">
+          <h3 class="data-box__title">Сменить пароль</h3>
+          <div class="input-block password">
+            <span class="input-block__hint">Введите текущий пароль</span>
+            <input class="input-block__field field pass" type="password" name="currentPassword" id=""
+              placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;">
+            <div class="input-block__hidepassword">
+              <img src="img/icons/password-off-icon.svg" alt="" class="input-block__hidepassword-icon active">
+              <img src="img/icons/password-on-icon.svg" alt="" class="input-block__hidepassword-icon ">
             </div>
-            <span class="recommend-item__specialisation">Стоматолог</span>
-            <span class="recommend-item__name">Муратов Александр Викторович</span>
-          </a>
-          <a href="#" class="recommend-item">
-            <div class="recommend-item__img">
-              <img src="img/main/recommend-doctor-2.png" alt="">
-            </div>
-            <span class="recommend-item__specialisation">Аллерголог</span>
-            <span class="recommend-item__name">Игнатова Антонина Валерьевна</span>
-          </a>
-          <a href="#" class="recommend-item">
-            <div class="recommend-item__img">
-              <img src="img/main/recommend-doctor-3.png" alt="">
-            </div>
-            <span class="recommend-item__specialisation">ЛОР</span>
-            <span class="recommend-item__name">Потапенко Анатолий Васильевич</span>
-          </a>
-          <a href="#" class="recommend-item">
-            <div class="recommend-item__img">
-              <img src="img/main/recommend-doctor-4.png" alt="">
-            </div>
-            <span class="recommend-item__specialisation">Гастроэнтеролог</span>
-            <span class="recommend-item__name">Шевченоко Наталья Юрьевна</span>
-          </a>
-          <a href="#" class="recommend-item">
-            <div class="recommend-item__img">
-              <img src="img/main/recommend-doctor-5.png" alt="">
-            </div>
-            <span class="recommend-item__specialisation">Детский стоматолог</span>
-            <span class="recommend-item__name">Исхандер Иоланта Сергеевна</span>
-          </a>
+          </div>
 
+          <div class="input-block password">
+            <span class="input-block__hint">Введите новый пароль</span>
+            <input class="input-block__field field pass" type="password" name="newPassword" id=""
+              placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;">
+            <div class="input-block__hidepassword">
+              <img src="img/icons/password-off-icon.svg" alt="" class="input-block__hidepassword-icon active">
+              <img src="img/icons/password-on-icon.svg" alt="" class="input-block__hidepassword-icon ">
+            </div>
+            <span class="input-block__text">
+              Пароль должен содержать не&nbsp;менее 8&nbsp;знаков, включая заглавные буквы и&nbsp;цифры.
+            </span>
+          </div>
+
+          <div class="input-block password">
+            <span class="input-block__hint">Повторите новый пароль</span>
+            <input class="input-block__field field pass" type="password" name="confirmNewPassword" id=""
+              placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;">
+            <div class="input-block__hidepassword">
+              <img src="img/icons/password-off-icon.svg" alt="" class="input-block__hidepassword-icon active">
+              <img src="img/icons/password-on-icon.svg" alt="" class="input-block__hidepassword-icon ">
+            </div>
+
+          </div>
+          <input type="submit" value="Сохранить пароль" class="form-submit disabled data-box__submit btn">
+        </form>
+
+        <div  class="data-box">
+          <h3 class="data-box__title">Удалить аккаунт</h3>
+          <p class="data-box__text">
+            Вы&nbsp;можете удалить свой аккаунт в&nbsp;один клик. Обратите внимание, что в&nbsp;этом случае удалится вся
+            информация вашего профиля, а&nbsp;код приглашения станет недействительным. Мы&nbsp;не&nbsp;сможем это
+            восстановить.
+          </p>
+          <div class="data-box__submit btn-light js-toDeleteAccount">
+            Удалить аккаунт
+          </div>
         </div>
+
+      </div>
+
       </div>
     </section>
   </main>
@@ -623,14 +699,11 @@
 
     </div>
   </footer>
-
-
   <script src="js/jquery.js"></script>
   <script src="js/droplist.js"></script>
   <script src="js/jquery.mask.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/main.js"></script>
-
 </body>
 
 </html>
